--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="CubeSdatabaseConnectionString" connectionString="Data Source=cubesserver.database.windows.net;Initial Catalog=CubeSdatabase;Persist Security Info=True;User ID=fabioml10;Password=Gallagher10"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
